docs/versions/7.4.0/rules/lib/providers/java_compilation_info.mdx
<html devsite>
<head>
  <meta name="project_path" value="/_project.yaml">
  <meta name="book_path" value="/versions/7.4.0/_book.yaml">
</head>
<body>

<h1 class="page-title" id="modules.java_compilation_info">java_compilation_info</h1>

{% dynamic setvar source_file "src/main/java/com/google/devtools/build/lib/starlarkbuildapi/java/JavaCompilationInfoProviderApi.java" %}
{% dynamic setvar version "7.4.0" %}
{% dynamic setvar original_path "/rules/lib/providers/java_compilation_info" %}
{% include "_buttons.html" %}
<!-- {% raw %} -->

Provides access to compilation information for Java rules.

<h2>Members</h2>
<ul>
    <li>
    <a href="#boot_classpath">boot_classpath</a>
  </li>
      <li>
    <a href="#compilation_classpath">compilation_classpath</a>
  </li>
      <li>
    <a href="#javac_options">javac_options</a>
  </li>
      <li>
    <a href="#javac_options_list">javac_options_list</a>
  </li>
      <li>
    <a href="#runtime_classpath">runtime_classpath</a>
  </li>
  </ul>

      <h2 id="boot_classpath">boot_classpath</h2>
        <p><pre class="rule-signature"><a class="anchor" href="../core/list.html">list</a> java_compilation_info.boot_classpath</pre></p>

    Boot classpath for this Java target.


        <h2 id="compilation_classpath">compilation_classpath</h2>
        <p><pre class="rule-signature"><a class="anchor" href="../builtins/depset.html">depset</a> java_compilation_info.compilation_classpath</pre></p>

    Compilation classpath for this Java target.


        <h2 id="javac_options">javac_options</h2>
        <p><pre class="rule-signature"><a class="anchor" href="../builtins/depset.html">depset</a> java_compilation_info.javac_options</pre></p>

    A depset of options to java compiler. To get the exact list of options passed to javac in the correct order, use the tokenize_javacopts utility in rules_java


        <h2 id="javac_options_list">javac_options_list</h2>
        <p><pre class="rule-signature"><a class="anchor" href="../core/list.html">list</a> java_compilation_info.javac_options_list</pre></p>

    A list of options to java compiler. This exists temporarily for migration purposes. javac_options will return a depset in the future, and this method will be dropped once all usages have been updated to handle depsets.


        <h2 id="runtime_classpath">runtime_classpath</h2>
        <p><pre class="rule-signature"><a class="anchor" href="../builtins/depset.html">depset</a> java_compilation_info.runtime_classpath</pre></p>

    Run-time classpath for this Java target.



</body>
</html>

<!-- {% endraw %} -->
